update 1.3 go to market strategies

--- a/01. Introduction to Marketing/1.3.1 Designing a Communications Campaign.md
+++ b/01. Introduction to Marketing/1.3.1 Designing a Communications Campaign.md
@@ -1,27 +1,63 @@
 ## Designing a Communications Campaign
 
-本课程模块聚焦传播策略设计，提出构建传播活动的"7M框架"：  
-1. **市场（Market）**：明确目标受众（如牛奶案例锁定现有饮用者）  
-2. **信息（Message）**：核心诉求（强调"家中常备牛奶"以提升消费量）  
-3. **使命（Mission）**：量化目标（一年内每周多喝一杯牛奶）  
-4. **创意（Manifestation）**：表达方式（使用名人/普通人多场景重复信息）  
-5. **媒介（Media）**：传播渠道（电视+印刷媒体组合）  
-6. **资金（Money）**：预算分配  
-7. **效果（Measurement）**：评估指标（3个月记忆度）  
+设计传播活动
 
-**关键案例洞察**：  
-- 牛奶消费下降的核心矛盾：消费者认可产品价值但家庭库存不足  
-- 行为经济学启示：产品可得性直接影响消费量（类比洗发水/碳酸饮料）  
+#### 核心概念与框架
+1. **传播策略的组成部分**  
+   - **传播手段**：分为大众/定向媒体（电视、数字、印刷、户外广告）、产品植入（如电影中的品牌展示）、公共关系（非付费媒体曝光）、个人/人际传播（销售团队、口碑营销）及店内促销。  
+   - **非传播手段**：价格折扣、优惠券等直接促销工具。
 
-**传播手段对比**：  
-- 广告（付费媒介） vs. 产品植入（间接影响） vs. 公关（非付费媒介） vs. 口碑（80%线下主导）  
-- 隐性传播（如电影植入BMW）可能比传统广告更有效  
+2. **关键区别**  
+   - **产品植入（Product Placement）**：将产品融入影视内容（如宝马在007电影中的出现），通过间接方式增强消费者印象。  
+   - **公共关系成本**：不支付媒体时段费用，但需投入资源策划能引发媒体报道的活动。
 
-**关键结论：**  
-1. **7M框架**是系统化设计传播活动的核心工具，前两要素（市场定位&核心信息）需在策略前期明确  
-2. **家庭库存管理**是提升快消品消费的关键杠杆，信息需通过创意重复强化  
-3. **间接传播手段**（产品植入/口碑）具有更高可信度，但需配合精准媒介策略  
-4. **效果评估**需与量化目标对齐，短期记忆度与长期行为改变需双重考量  
-5. 传播策略必须与整体市场定位（5C/4P框架）深度整合，确保信息一致性  
+3. **口碑营销的重要性**  
+   - 80%的口碑传播仍通过线下人际互动进行，仅20%发生在线上，强调线下场景管理的重要性。
 
-**行动启示**：设计传播活动时，应先通过消费者行为洞察识别真实痛点（如库存缺口），再运用7M框架构建可衡量的整合传播方案，重点平衡创意吸引力与信息重复强度。
+---
+
+#### 传播活动设计的7M框架  
+1. **Markets（目标市场）**  
+   - **关键问题**：针对现有用户还是新用户？  
+   - **案例**：Got Milk活动聚焦现有牛奶消费者，而非吸引新用户。
+
+2. **Message Content（信息内容）**  
+   - **核心信息**：明确传递的行动指令或情感诉求。  
+   - **案例**：鼓励消费者“确保家中常备牛奶”，以触发更多饮用场景。
+
+3. **Mission（目标使命）**  
+   - **具体目标**：如提升认知度、增加消费量等。  
+   - **案例**：目标为一年内每周增加一杯牛奶消费。
+
+4. **Message Design（信息设计）**  
+   - **创意策略**：通过情感共鸣或记忆点强化信息。  
+   - **案例**：“Got Milk?” 使用“匮乏情境”（如牛奶喝完时的尴尬）引发消费者共鸣。
+
+5. **Media Strategy（媒体策略）**  
+   - **渠道选择**：电视、数字广告等需匹配目标受众习惯。  
+   - **案例**：Got Milk采用电视和印刷媒体覆盖广泛受众。
+
+6. **Money（预算）**  
+   - 需权衡媒体购买成本与活动效果，但课程未深入展开。
+
+7. **Measurement（效果测量）**  
+   - **评估指标**：消费量增长、品牌回忆度等。  
+   - **案例**：通过消费数据追踪目标达成情况。
+
+---
+
+#### 关键案例：Got Milk? 活动分析  
+- **问题洞察**：尽管消费者认可牛奶的健康与口感，但消费量下降。  
+- **根本原因**：家庭牛奶储备不足导致饮用机会减少。  
+- **解决方案**：通过传播活动鼓励家庭多购买牛奶，并设计“Got Milk?”创意广告强化记忆点。  
+- **结果**：成功将消费行为与家庭库存关联，提升消费频次。
+
+---
+
+#### 核心结论  
+1. **定位先行**：目标市场与核心信息（前两个M）应基于品牌定位提前确定，如差异点（Points of Difference）和目标人群。  
+2. **创意与数据结合**：信息设计需兼顾情感共鸣与理性诉求（如Got Milk的“匮乏情境”），同时依赖消费者行为数据支撑策略。  
+3. **整合传播与非传播手段**：价格促销与传播活动互补，但需避免渠道冲突（如过度折扣损害品牌价值）。  
+4. **效果导向**：明确可量化的目标（如消费量提升），并通过持续测量优化活动。
+
+通过7M框架，企业可系统化设计传播活动，确保策略的完整性与落地性，最终实现市场目标。
