--- a/01. Introduction to Marketing/1.3.13 Online Retailing and E-Commerce.md
+++ b/01. Introduction to Marketing/1.3.13 Online Retailing and E-Commerce.md
@@ -1,66 +1,55 @@
 ## Online Retailing and E-Commerce
-  
-本模块聚焦**在线零售与电子商务的发展趋势**，分析消费行为变迁、线上线下竞争机制及全渠道零售的未来方向，揭示数字化对传统商业模式的颠覆。以下为核心要点：
+
+在线零售与电子商务
+
+#### 一、全球电商趋势与数据洞察
+| **维度**               | **关键数据与观察**                                                                                   | **启示**                                                                 |
+|------------------------|-----------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------|
+| **全球电商渗透率**      | - 2014年电商占全球零售额5.9%，2018年升至8.8%（部分估计达10%）。<br>- **中国**（16.6%）和**英国**（高于中国）领先，美国为8.9%。 | 新兴市场（如中国）的电商增速远超传统市场，支付习惯与技术普及是核心驱动力。            |
+| **消费者行为**          | - **高频用户**：30%男性每周网购，年轻群体更活跃，但65岁以上人群58%每年至少网购一次。<br>- **设备使用**：PC端占77%销售额（高转化率），手机端以浏览为主（33.7%流量仅10.7%销售）。 | PC仍是核心交易渠道，但移动端潜力巨大；需优化手机端用户体验以提升转化。 |
 
 ---
 
-#### **1. 全球电商增长现状**  
-- **规模与增速**：  
-  - 2018年全球电商占零售总额8.8%-10%（不含金融、航空等交易），年复合增长率显著。  
-  - **区域差异**：中国电商渗透率达16.6%（现金交易极少），英国紧随其后，美国仅为8.9%。  
-- **用户行为**：  
-  - **频率**：男性30%至少每周网购一次，女性略低；65岁以上人群中58%每年至少网购一次。  
-  - **设备偏好**：PC仍是主要交易渠道（贡献77%销售额），智能手机以浏览为主（仅10.7%销售）。  
+#### 二、电商增长的底层逻辑
+1. **产品属性分类**  
+   | **属性类型**       | **定义**                                  | **示例**                          | **渠道偏好**              |  
+   |--------------------|------------------------------------------|----------------------------------|--------------------------|  
+   | **数字化属性**     | 可通过数字渠道传递的量化信息（规格、价格）。    | 电脑屏幕尺寸、打印机墨盒型号。      | 线上销售主导（低成本、高效率）。 |  
+   | **非数字化属性**   | 需实体体验感知的质性特征（触感、使用体验）。    | 汽车座椅舒适度、跑鞋支撑性。        | 依赖线下渠道（试驾、试穿）。   |  
+
+2. **复购效应**  
+   - **首次购买**：依赖非数字化属性（实体店体验）。  
+   - **复购行为**：非数字化属性转化为数字化认知，推动线上销售。  
+   - **案例**：袜子、衬衫首次线下购买后，复购转向线上。  
 
 ---
 
-#### **2. 电商增长的核心驱动力**  
-- **产品属性分化**：  
-  - **数字属性产品**（如电子产品、服装）易在线销售，因其规格可通过数据清晰传达。  
-  - **非数字属性产品**（如汽车、家具）需线下体验，但重复购买后逐渐转向线上（用户熟悉后无需再次触感验证）。  
-- **重复购买行为**：  
-  - 首购需线下体验非数字属性（如试穿鞋子），复购则因认知固化转为线上（如品牌忠诚度驱动的袜子、衬衫复购）。  
+#### 三、线上与线下的竞争与融合
+| **竞争现象**         | **定义**                                  | **应对策略**                                                                 | **案例**                                |  
+|----------------------|------------------------------------------|-----------------------------------------------------------------------------|----------------------------------------|  
+| **展厅效应（Showrooming）** | 消费者线下体验后线上低价购买。              | - 价格匹配政策（Best Buy）。<br>- 线下独家产品（差异化SKU）。                        | Best Buy与亚马逊的价格战。               |  
+| **网房效应（Webrooming）** | 消费者线上研究后线下即时购买。              | - 提升物流速度（次日达）。<br>- 优化库存透明度（实时库存显示）。                    | 亚马逊Prime会员服务。                    |  
+| **全渠道零售（Omni-Channel）** | 线上线下无缝整合，提供一致体验。            | - 订单线上支付线下提货（BOPIS）。<br>- 数据打通（会员系统共享）。                   | 星巴克（App下单+门店取餐）、沃尔玛全渠道整合。 |  
 
 ---
 
-#### **3. 线上线下竞争与应对策略**  
-- **展厅现象（Showrooming）**：  
-  - 消费者线下体验（如Best Buy研究电视）后转向线上低价购买（亚马逊受益）。  
-  - **对策**：价格匹配、独家产品线或优化线下体验（如增强服务差异化）。  
-- **网络展厅现象（Webrooming）**：  
-  - 消费者线上研究后因即时需求转向线下购买（如急需电子产品）。  
-  - **对策**：提升配送速度、优化库存可见性或捆绑服务（如亚马逊Prime会员）。  
+#### 四、未来策略建议
+1. **全渠道必要性**  
+   - **线上品牌**：开设体验店（如Warby Parker、Casper）。  
+   - **线下品牌**：强化电商能力（如Macy’s线上商城）。  
+   - **融合关键**：通过技术（如AR试穿、虚拟展厅）弥合非数字化属性鸿沟。  
+
+2. **消费者旅程优化**  
+   - **首次触达**：线下体验店解决非数字化需求。  
+   - **复购留存**：通过订阅服务、个性化推荐锁定线上复购。  
+
+3. **数据驱动决策**  
+   - 追踪跨渠道行为数据，识别展厅/网房效应热点。  
+   - 动态调整库存与定价（如高峰期溢价、独家套餐）。  
 
 ---
 
-#### **4. 全渠道零售（Omni-channel）的必然性**  
-- **定义**：线上线下无缝整合的零售模式（如星巴克支持线上线下订单互通）。  
-- **趋势**：  
-  - **线上企业布局线下**：Warby Parker开设实体店，亚马逊收购Whole Foods。  
-  - **线下企业拥抱线上**：Best Buy、沃尔玛、梅西百货拓展电商平台。  
-- **关键成功要素**：  
-  - **统一用户体验**：确保各渠道价格、库存、服务一致性。  
-  - **数据驱动优化**：利用消费行为数据（如浏览路径）改进产品与渠道策略。  
-
----
-
-### **关键结论**  
-1. **电商渗透率持续提升**：  
-   - 数字属性产品与重复购买行为是核心推动力，未来全渠道融合将成为标配。  
-2. **线上线下博弈本质**：  
-   - 消费者通过“体验-比价-购买”闭环驱动渠道竞争，企业需平衡体验成本与价格优势。  
-3. **区域市场差异显著**：  
-   - 中国等新兴市场依赖移动支付与高互联网普及率，欧美市场需应对成熟线下零售的转型压力。  
-4. **技术赋能体验创新**：  
-   - 增强现实（AR）、虚拟试衣等技术可弥补线上非数字属性短板，推动更多品类向电商迁移。  
-
----
-
-### **行动建议**  
-- **数据驱动渠道设计**：分析用户购买路径与产品属性，优化线上线下分工（如线下体验、线上成交）。  
-- **构建防御壁垒**：  
-  - 通过独家产品、会员体系或极致服务（如苹果线下体验店）锁定忠实客户。  
-- **敏捷响应竞争**：  
-  - 对展厅现象采用动态定价或限时优惠，对网络展厅现象加强本地化库存与快速配送。  
-- **投资全渠道技术**：  
-  - 部署统一ERP系统、智能仓储与CRM工具，实现跨渠道用户行为追踪与精准营销。
+#### 五、经典案例
+- **Warby Parker**：通过“家庭试戴+线下体验店”颠覆眼镜行业，降低价格50%-70%。  
+- **亚马逊**：Prime会员服务（快速物流+内容生态）提升客户粘性，应对展厅效应。  
+- **星巴克**：App整合线下门店与线上支付，实现订单量30%来自数字化渠道。
