--- a/01. Introduction to Marketing/1.3.2 Key Trends.md
+++ b/01. Introduction to Marketing/1.3.2 Key Trends.md
@@ -1,38 +1,69 @@
 ## Key Trends
- 
-本模块深入探讨传播策略设计的动态平衡与战术选择，聚焦三大核心维度：  
 
-### 一、媒体趋势与策略优先级  
-1. **媒介融合趋势**：数字广告中视频内容占比达65%（类比电视内容形态），但传统电视仍占广告预算1/3  
-2. **策略铁律**：媒体选择服从于传播设计（而非相反），需先明确7M框架再选择媒介组合  
+关键趋势
 
-### 二、消费者决策阶段与传播组合  
-1. **行为阶梯模型**：认知（Awareness）→兴趣（Interest）→欲望（Desire）→行动（Action）  
-2. **1-2连击理论**：  
-   - 阶段1：大众媒体（电视/数字视频）建立认知（覆盖80%初期用户）  
-   - 阶段2：人际传播（销售团队/口碑）实现转化（提升30%购买率）  
-3. **预算分配启示**：典型100美元预算中，60%用于大众媒体触达，40%投入口碑培育  
+#### 核心媒体趋势与传播设计原则
+1. **媒体格局变化**  
+   - **电视仍是主流**：尽管数字媒体快速增长，电视广告仍占广告总支出的1/3，覆盖最广受众。  
+   - **数字媒体的“电视化”**：数字广告内容以视频为主（如YouTube、企业官网视频），形式趋同于传统电视，仅分发渠道不同。  
+   - **户外媒体稳定**：广告牌等户外媒体保持稳定需求，未被数字完全取代。  
 
-### 三、信息设计双引擎  
-| **诉求类型** | **典型策略**                     | **有效性场景**               | **风险控制**                 |  
-|--------------|----------------------------------|----------------------------|----------------------------|  
-| **理性诉求**  | 产品技术演示（如Dyson吸尘器）       | 高介入决策（单价>$100产品）   | 需符合FTC技术验证标准        |  
-|              | 用户证言（非付费用户背书）          | 新品类市场教育                | 避免过度戏剧化               |  
-|              | 竞品对比（需法律合规）              | 红海市场竞争                 | 遵循NAD广告真实性准则        |  
-| **情感诉求**  | 企业形象广告（宝洁奥运母子情）       | 多品牌集团（品牌协同效应）     | ROI周期较长（需3-5年持续）   |  
-|              | 恐惧诉求（适度剂量+幽默缓冲）        | 健康/安全相关品类             | 恐惧强度控制在"焦虑-行动"阈值 |  
+2. **传播设计原则不变**  
+   - **媒体选择服从传播策略**：媒体渠道的选择应基于传播活动的设计目标，而非媒体变化主导策略调整。  
+   - **核心逻辑**：先明确传播目标（如提升认知或促进转化），再选择匹配的媒体组合。
 
-**关键结论：**  
-1. **媒介中性原则**：视频内容主导时代（电视/数字趋同），传播策略应聚焦内容质量而非载体形式  
-2. **阶段适配定律**：认知阶段1美元大众媒体投入，需匹配0.5美元人际传播预算以实现转化漏斗优化  
-3. **诉求选择矩阵**：  
-   - 技术复杂性产品优先理性诉求（技术演示+第三方认证）  
-   - 情感驱动品类采用"70%情感+30%理性"混合策略（如保险业恐惧+数据组合）  
-4. **恐惧剂量曲线**：恐惧强度与传播效果呈倒U型关系，最佳实践为"威胁感知度60%+解决方案明确性"平衡  
-5. **企业广告悖论**：多品牌集团（House of Brands）的企业形象广告回报周期比单一品牌架构长2.3倍，需配套产品线协同机制  
+---
 
-**行动框架：**  
-1. 绘制消费者决策路径图，标注各阶段媒介触点和信息类型  
-2. 建立诉求有效性测试机制：A/B测试理性VS情感诉求组合（样本量>1000）  
-3. 设计恐惧诉求时植入"幽默安全阀"（如拟人化病菌形象降低心理抗拒）  
-4. 企业形象广告需绑定具体产品利益点（如宝洁奥运广告关联旗下婴儿护理品牌）
+#### 传播活动的阶段目标（Mission）与资源分配
+1. **消费者决策阶段模型**  
+   - **效果层次理论（Hierarchy of Effects）**：消费者从认知（Awareness）到行动（Action）需经历四阶段：  
+     **认知 → 兴趣 → 欲望 → 购买**。  
+   - **媒体效率差异**：  
+     - **大众媒体（广告）**：擅长早期阶段（提升认知与兴趣）。  
+     - **人际传播（口碑、销售）**：在后期阶段（激发欲望与促成购买）更有效。  
+
+2. **“1-2 Punch”传播策略**  
+   - **组合策略**：  
+     - **第一击（大众媒体）**：通过广告建立品牌认知（如电视广告）。  
+     - **第二击（人际传播）**：通过口碑或销售团队推动转化（如用户推荐）。  
+   - **预算分配**：避免将全部预算投入单一媒体，需均衡覆盖不同阶段（如70%用于广告，30%用于口碑管理）。
+
+---
+
+#### 信息设计（Message Design）策略：理性与情感诉求
+1. **理性诉求（Rational Appeals）**  
+   - **核心逻辑**：通过逻辑说服消费者，强调产品功能或性能优势。  
+   - **常见形式**：  
+     - **产品演示**：技术展示（如Dyson吸尘器的气流技术广告）。  
+     - **代言人**：专家或可信人物背书（需谨慎选择以避免高成本风险）。  
+     - **用户见证**：普通用户的使用体验分享（增强可信度）。  
+     - **产品对比**：直接比较竞品（需符合法律规范）。  
+
+2. **情感诉求（Emotional Appeals）**  
+   - **核心逻辑**：通过情感共鸣影响消费者决策。  
+   - **积极情感**：  
+     - **温情与幽默**：如宝洁奥运广告（母子亲情引发共鸣）。  
+   - **消极情感**：  
+     - **恐惧诉求**：需适度使用（如药品广告中的“病菌”卡通化处理），过量会引发消费者排斥。  
+     - **调整方法**：结合幽默或间接表达缓解恐惧感（如保险广告用轻松场景提示风险）。
+
+---
+
+#### 关键结论  
+1. **媒体趋势的底层逻辑**：  
+   - 数字媒体与传统媒体的内容本质趋同（视频主导），渠道选择需匹配目标受众触达习惯。  
+   - 传播策略设计应以目标为导向，而非被动适应媒体变化。  
+
+2. **分阶段传播策略**：  
+   - 大众媒体与人际传播需互补，覆盖消费者决策全链路。  
+   - 品牌需明确“Mission”阶段目标（如提升认知或促进转化），避免资源错配。  
+
+3. **信息设计的平衡艺术**：  
+   - 理性诉求需依赖实证（如技术演示），情感诉求需引发共鸣（如温情故事）。  
+   - 恐惧诉求需谨慎使用，通过创意手法（如幽默）降低负面情绪冲击。  
+
+4. **案例启示**：  
+   - **Dyson**：以技术演示强化理性说服。  
+   - **宝洁奥运广告**：通过情感叙事提升品牌形象，虽未直接推销产品，但增强用户好感。  
+
+通过结合趋势洞察、阶段化策略与多元信息设计，企业可构建高效的传播活动，实现从认知到转化的全链路影响。
