--- a/01. Introduction to Marketing/1.3.3 Media Planning.md
+++ b/01. Introduction to Marketing/1.3.3 Media Planning.md
@@ -1,46 +1,77 @@
 ## Media Planning
 
-本模块聚焦媒体规划的战略框架与执行原则，提出三大核心操作体系：  
+媒体策划
 
-### 一、媒体类型三维矩阵  
-| **媒体类型** | **定义与示例**                          | **战略价值**                     | **成本效益比** |  
-|--------------|----------------------------------------|--------------------------------|--------------|  
-| **付费媒体**  | 电视/搜索广告/YouTube贴片（例：宝洁TVC投放） | 精准触达目标人群（CTR提升20-30%） | 高成本（CPM $5-50） |  
-| **赢得媒体**  | 赛事赞助/公益行动引发的媒体报道（例：红鞋计划） | 建立品牌可信度（信任度+40%）      | 中低成本（杠杆效应） |  
-| **自有媒体**  | 官网/产品物理标识（例：汽车尾部LOGO展示）   | 持续品牌曝光（日均触达量提升3倍） | 边际成本趋零 |  
+#### 核心概念与框架
+1. **媒体类型（Media Types）**  
+   - **付费媒体（Paid Media）**：通过购买广告位触达受众（如电视广告、搜索引擎广告、横幅广告）。  
+   - **赚得媒体（Earned Media）**：通过活动或社会行为获得免费曝光（如赞助赛事、公益活动引发媒体报道）。  
+   - **自有媒体（Owned Media）**：企业自有渠道（官网、产品本身、实体建筑标识）直接触达用户。  
+   - **案例**：汽车品牌将名称印在车尾（自有媒体），便于后车识别；赞助慈善活动（赚得媒体）提升品牌形象。
 
-### 二、预算制定黄金法则  
-1. **目标反推法**：  
-   - 设定具体目标（如3个月品牌认知度达60%）  
-   - 逆向计算所需媒体曝光量（GRP≥200）  
-   - 对比传统方法：目标法比"销售额百分比法"提升ROI 25%  
+2. **媒体计划流程（Media Planning Process）**  
+   - **5W1H框架**：  
+     - **目标受众（WHO?）**：明确传播对象（如现有用户/新用户）。  
+     - **渠道选择（WHAT?）**：匹配受众触媒习惯（如年轻群体使用数字媒体）。  
+     - **具体媒介（WHERE?）**：细化到平台或节目（如YouTube视频广告、某体育赛事赞助）。  
+     - **时间安排（WHEN?）**：根据消费周期制定排期（如节日促销提前预热）。  
+     - **预算分配（HOW MUCH?）**：结合目标与资源分配预算。  
+   - **核心原则**：媒体选择服从传播策略目标，而非被动跟随媒体趋势。
 
-### 三、测量前置原则  
-- **神经科学工具**：皮肤电反应测试（广告情绪激发度）  
-- **数字追踪**：Google Analytics转化路径分析（CTR→购买率漏斗）  
-- **成本控制**：每$1广告投入仅需$0.01测量成本  
+---
 
-**关键案例洞察**：  
-- Meow Mix广告通过30秒内60次品牌重复，实现次日回忆率85%（行业平均35%）  
-- 广告失败主因：87%的案例因品牌提及滞后于内容高潮（观众注意力已转移）  
+#### 关键决策与工具
+1. **预算设定（Money）**  
+   - **传统误区**：  
+     - **销售额比例法**：预算与销售额挂钩，可能导致资源错配（如经济下行期仍需广告投入）。  
+     - **竞争对标法**：盲目匹配竞品预算，忽视自身目标差异。  
+   - **目标-任务法（Objectives and Tasks）**：  
+     - **步骤**：明确目标（如3个月内品牌认知度提升至40%）→ 倒推所需资源（如广告频次、渠道覆盖量）→ 制定预算。  
+     - **优势**：以结果为导向，避免预算浪费。  
 
-**关键结论：**  
-1. **媒体组合最优配比**：成熟品牌建议采用50%付费+30%自有+20%赢得媒体，初创品牌调整为70%付费+20%赢得+10%自有  
-2. **预算制定陷阱规避**：  
-   - 警惕广告公司"销售额挂钩"提案（隐性利益绑定风险）  
-   - 采用S.M.A.R.T目标体系（具体/可测/可达/相关/时限）  
-3. **测量技术分层应用**：  
-   - 前期：眼动追踪优化广告视觉焦点（热点区域停留时长≥2秒）  
-   - 中期：A/B测试创意版本（样本量≥1000人）  
-   - 后期：归因模型分析渠道贡献（首次触击VS最终点击权重）  
-4. **广告有效性铁律**：  
-   - 品牌名需在前8秒出现（避免17%观众流失）  
-   - 每30秒广告至少3次产品展示+2次购买指引（转化率提升40%）  
+2. **效果测量（Measurement Methods）**  
+   - **前期测试**：创意策略预研（如焦点小组评估广告概念）。  
+   - **传统指标**：  
+     - **印刷广告**：Starch Scores（读者注意力停留区域分析）。  
+     - **电视广告**：次日回忆率（Day After Recall）。  
+   - **生理测量**：  
+     - **皮肤电反应（GSR）**：检测情绪波动。  
+     - **眼动追踪**：分析视觉焦点路径。  
+     - **脑部成像（fMRI）**：观察大脑对广告的深层反应。  
+   - **跨市场测试**：在部分市场增加投放，对比控制组数据验证效果。  
+   - **核心原则**：测量方案需在投放前确定，避免事后无法追溯效果。
 
-**行动框架：**  
-1. 建立媒体组合动态看板：实时监控三类媒体ROAS（广告支出回报率）  
-2. 制定《测量协议白皮书》：在创意简报阶段明确KPI测量方法与频次  
-3. 植入"品牌脉冲"机制：关键信息每10秒重复一次（神经记忆强化原理）  
-4. 设置广告公司激励机制：将15%服务费与可量化的品牌健康指标挂钩（如NPS提升）  
+---
 
-**终极警示：** 获奖广告与市场效果相关系数仅0.32，坚持"信息清晰度＞艺术性"原则，避免陷入创意自嗨陷阱。
+#### 实践案例与启示
+1. **Meow Mix广告**  
+   - **设计策略**：  
+     - 重复品牌名称（“Meow”重复60次）强化记忆。  
+     - 直接展示产品使用场景，避免复杂叙事。  
+   - **效果**：次日回忆率极高，但未获广告奖项。  
+   - **启示**：传播目标（品牌记忆）优先于创意形式，简单直接更有效。  
+
+2. **宝洁奥运广告**  
+   - **情感叙事**：通过母子温情故事传递品牌价值观。  
+   - **企业形象广告适用性**：多品牌企业（如宝洁）需谨慎使用，避免资源分散。  
+
+---
+
+#### 关键结论
+1. **媒体策略的整合性**  
+   - 付费、赚得、自有媒体需协同（如付费广告引流至官网/线下活动）。  
+   - 避免过度依赖单一媒体类型，平衡短期曝光与长期品牌建设。  
+
+2. **目标导向的预算与测量**  
+   - 采用“目标-任务法”确保预算与业务目标强关联。  
+   - 测量方案需前置，拒绝“先执行后评估”的粗放模式。  
+
+3. **创意与实效的平衡**  
+   - 创意设计服务于传播目标（如品牌记忆、转化率），避免过度追求艺术性。  
+   - 重复关键信息（如品牌名、核心卖点）是提升效果的有效手段。  
+
+4. **战略对齐**  
+   - 传播策略需与整体市场定位（Positioning）及4P策略一致（如高价产品匹配高端媒体）。  
+   - 广告是营销计划的一部分，需与产品、渠道、定价协同作用。  
+
+通过系统化媒体计划、科学预算分配及严格效果测量，企业可最大化传播效率，将品牌信息精准触达目标受众并驱动业务增长。
