--- a/01. Introduction to Marketing/1.3.5 Understanding Price Sensitivity.md
+++ b/01. Introduction to Marketing/1.3.5 Understanding Price Sensitivity.md
@@ -1,52 +1,72 @@
 ## Understanding Price Sensitivity
- 
-本模块系统解构价格敏感度的七大核心驱动因素，揭示消费者价格决策的深层逻辑：
 
-### 一、价格敏感度驱动矩阵  
-| **驱动因素**          | **作用机制**                          | **典型案例**                     | **敏感度变化** |  
-|-----------------------|--------------------------------------|----------------------------------|--------------|  
-| **替代品可获得性**      | 替代品数量×认知度（信息不对称调节）    | 巴黎游客VS费城居民餐厅选择       | +38%         |  
-| **价格可比性**          | 货架位置/信息透明度的边际效应          | 药店自有品牌紧邻泰诺陈列         | +25%（份额↑10%） |  
-| **支出占比**            | 总支出额×成本结构权重（双杠杆效应）     | 钢制家具商VS木制家具商的钢材采购 | +52%         |  
-| **费用分摊机制**        | 支付者-使用者分离的激励扭曲            | 企业差旅保险VS个人自费购药       | -67%         |  
-| **转换成本**            | 沉没成本锁定的行为惯性                 | SUV车主对油价上涨的无奈接受      | -41%         |  
-| **价格-质量关联**       | 信息不对称下的启发式判断（新手效应）    | 法律咨询/红酒 novice消费者       | -58%         |  
-| **库存能力**            | 跨期替代可能性（存储成本阈值）          | 麦片促销囤货VS鲜奶即时消费       | +33%         |  
+了解价格敏感度
+
+#### 核心概念
+**价格敏感性（Price Sensitivity）**：消费者对价格变化的反应程度。价格敏感性越高，消费者越容易因价格变化而改变购买行为。  
+**价格弹性（Price Elasticity）**：量化价格敏感性的指标，表示价格变动1%时需求量的百分比变化（公式：价格弹性 = 需求量变化% / 价格变化%）。
 
 ---
 
-### 二、关键商业洞察  
-1. **货架位置经济学**：将自有品牌与全国品牌并排陈列，可比单独陈列提升转化率15%（沃尔玛实证）  
-2. **支付分离悖论**：企业差旅采用"节省金额50%奖励员工"机制，可使机票采购成本下降22%  
-3. **新手溢价陷阱**：法律服务业中，70%的初次消费者愿意为高价律师支付2.3倍费用（尽管服务质量差异仅+17%）  
-4. **存储成本临界点**：当产品保质期超过6个月时，价格促销带来的销量提升幅度达正常时期的3倍  
+#### 价格敏感性的七大驱动因素
+1. **替代品的可获得性与认知（Availability & Awareness of Substitutes）**  
+   - **关键逻辑**：替代品越多，消费者越容易因价格上涨转向其他产品。  
+   - **案例**：熟悉本地餐厅的消费者（如费城居民）比游客（如巴黎游客）更易比较价格，因而价格敏感性更高。  
+
+2. **直接比较的便利性（Ease of Direct Comparison）**  
+   - **关键逻辑**：价格对比越容易，消费者越敏感。  
+   - **案例**：超市将自有品牌（如沃尔玛止痛药）与全国性品牌（如泰诺）放在同一货架，自有品牌份额可提升10%。  
+
+3. **支出比例（Expenditure）**  
+   - **总支出影响**：产品占消费者预算比例越大，价格敏感性越高。  
+     - **案例**：大家庭对食品价格更敏感（食品支出占比高）。  
+   - **成本占比影响**：产品占企业成本比例越大，企业价格敏感性越高。  
+     - **案例**：钢制家具制造商对钢材价格敏感度远高于木制家具制造商（钢材占前者成本比例高）。  
+
+4. **成本分摊（Shared Cost）**  
+   - **关键逻辑**：当他人（如企业、保险公司）承担部分费用时，消费者价格敏感性降低。  
+   - **应对策略**：通过直接折扣（而非整体降价）激励消费者敏感度。  
+     - **案例**：药品保险报销80%时，消费者对药价敏感度低；若直接给消费者折扣20%，其敏感度会提升。  
+
+5. **转换成本（Switching Cost）**  
+   - **关键逻辑**：更换现有产品的成本（如时间、金钱、习惯）越高，价格敏感性越低。  
+   - **案例**：高油耗SUV车主即使油价上涨也难以换车，因换车成本高，故对油价敏感度低。  
+
+6. **价格质量推断（Price/Quality Inferences）**  
+   - **关键逻辑**：消费者缺乏专业知识时，倾向于通过高价推断高质量。  
+   - **案例**：  
+     - **葡萄酒**：新手认为高价酒更好，专家则更关注口感而非价格。  
+     - **专业服务**（法律、医疗）：消费者因信息不对称，认为高价服务更可靠。  
+
+7. **库存能力（Ability to Carry Inventory）**  
+   - **关键逻辑**：可囤货的产品价格敏感性更高，消费者会趁低价大量购买。  
+   - **案例**：  
+     - **耐储存品**（如麦片）：促销时销量激增（消费者囤货）。  
+     - **易腐品**（如牛奶）：无法囤货，价格敏感性低。  
 
 ---
 
-### 三、价格敏感度操纵策略  
-**降敏策略（溢价空间创造）**：  
-1. 制造信息不对称：专业服务行业构建知识壁垒（如咨询公司白皮书体系）  
-2. 提高转换成本：SAAS行业采用数据迁移成本锁定（每GB迁移成本$5设计）  
-3. 重构成本结构：B2B场景中将大额采购拆分为分期服务费（占总成本比<8%）  
+#### 关键结论与策略启示
+1. **差异化定价的底层逻辑**  
+   - **高敏感性场景**（如替代品多、易比较）：采用竞争性定价（如渗透定价）。  
+   - **低敏感性场景**（如专业服务、转换成本高）：可溢价定价（如奢侈品、B2B服务）。  
 
-**增敏策略（市场份额夺取）**：  
-1. 强化可比性：电商平台"比价助手"功能使点击转化率提升40%  
-2. 刺激跨期存储：推出"家庭装+90天保质期"组合，促销期销量可达日常5倍  
-3. 切断质量联想：开设"专家直选"认证体系（如葡萄酒大师推荐平价酒款）  
+2. **降低敏感性的策略**  
+   - **增加转换成本**：通过会员体系、定制化服务锁定用户（如苹果生态）。  
+   - **强化价格质量关联**：通过品牌建设塑造高价合理性（如戴森的技术营销）。  
+   - **模糊价格对比**：将自有品牌与竞品分开放置，或突出产品独特性（如星巴克强调体验而非咖啡成本）。  
+
+3. **数据驱动的价格弹性管理**  
+   - **测量方法**：通过A/B测试、历史数据分析价格弹性，动态调整定价策略。  
+   - **消费者细分**：针对不同群体设计价格策略（如学生折扣、企业用户协议价）。  
+
+4. **行为经济学应用**  
+   - **锚定效应**：展示高价产品后，中价位产品显得更划算（如餐厅菜单设计）。  
+   - **损失规避**：强调“不行动的成本”（如“错过促销将多花20%”）。  
 
 ---
 
-**关键结论：**  
-1. **敏感度动态地图**：构建消费者旅程各触点价格敏感度热力图（支付环节敏感度比认知环节高3.2倍）  
-2. **货架博弈论**：每增加1个竞品相邻陈列，本品牌价格弹性系数上升0.17（需通过包装差异化抵消）  
-3. **跨期弹性杠杆**：存储型商品价格弹性系数（-2.1）显著高于即时消费型（-0.7）  
-4. **新手税**现象：信息不对称行业采用"阶梯式定价"（基础版$50/专家版$500）可多捕获23%消费者剩余  
-
-**行动框架：**  
-1. 开发《价格敏感度诊断工具包》：含7大因子权重算法（各行业参数预设）  
-2. 实施"敏感度工程"：  
-   - 高敏感市场：每月价格战窗口期（结合库存周期）  
-   - 低敏感市场：季度价值沟通计划（客户教育内容矩阵）  
-3. 建立敏感度预警系统：实时监控替代品上新/竞品促销/舆情波动（触发阈值自动调整定价）  
-
-**终极警示：** 价格敏感度管理不是单点博弈，需与品牌资产（7Ms框架）形成战略协同——高端定位市场强行实施价格战会导致品牌净值损失速度（-18%季度环比）远超短期销量收益（+5%）。
+#### 总结金句
+- **“价格敏感不是消费者的天性，而是情境的产物。”**  
+- **“最好的定价策略不是对抗敏感，而是利用敏感。”**  
+通过理解价格敏感性的驱动因素，企业可精准设计定价策略，最大化利润并强化市场竞争力。
