--- a/01. Introduction to Marketing/1.3.7 Psychological Aspects of Pricing.md
+++ b/01. Introduction to Marketing/1.3.7 Psychological Aspects of Pricing.md
@@ -1,90 +1,92 @@
 ## Psychological Aspects of Pricing
 
-本模块揭示定价决策中的关键心理学原理，构建行为定价的四大杠杆体系：
+定价的心理因素
 
-### 一、核心心理学效应与商业应用  
-| **效应名称**         | **作用机制**                          | **经典案例**                          | **商业价值**               |  
-|----------------------|--------------------------------------|--------------------------------------|--------------------------|  
-| **9结尾定价**         | 左位数效应+促销感知（$59 vs $60）      | 人造黄油降价至$59销量↑400%            | 提升转化率22-35%         |  
-| **韦伯-费希纳定律**    | 相对变化敏感度＞绝对变化（$5/10 vs $5/1000） | 消费者愿驱车5英里省$5（仅限低价商品）  | 优化折扣呈现方式（%＞$）  |  
-| **禀赋效应**          | 虚拟所有权提升支付意愿（心理账户锚定）    | 汽车试驾独立化（无销售陪同）           | 客单价提升18%            |  
-| **参考价格操纵**       | 锚定对比构建价值感知（高价参照物）        | 电视购物先标$999再降至$299             | 溢价空间扩大40%          |  
-| **情境效应**          | 选择架构引导中间选项（好-更好-最佳）      | 相机组合$169/$239/$469→中端销量↑55%    | 利润贡献率提升28%         |  
+#### 1. 关键心理学定价效应
+以下为影响消费者价格感知的核心心理机制，及其在商业中的应用：
 
 ---
 
-### 二、关键实证洞察  
-1. **价格尾数魔数**：  
-   - $X.99比整数定价转化率高17%（电商数据）  
-   - 但奢侈品领域反规律（$2000→$1999销量降3%）  
-
-2. **折扣呈现法则**：  
-   - 标价$100→"立减20%"比"省$20"点击率高31%  
-   - 高单价商品需强调绝对值（$5000产品"省$1000"更有效）  
-
-3. **虚拟所有权工程**：  
-   - IKEA"家居规划工具"让用户设计虚拟房间，购买率提升40%  
-   - 化妆品"试用装+7天体验期"策略使退货率降低62%  
-
-4. **锚定效应强度**：  
-   - 首个展示价格影响最终支付意愿的权重达67%  
-   - 酒店官网默认显示"豪华套房"作锚，标准房预订量↑22%  
+##### 1.1 9结尾定价（9-Ending Pricing）
+- **现象**：价格以9或5结尾（如\$9.99）更能刺激购买意愿。
+- **案例**：
+  - **人造黄油实验**：价格从83美分降至59美分（降幅24美分），销量增长400%；而此前从83美分降至63美分（降幅20美分）仅增长194%。  
+  - **目录销售实验**：同一连衣裙标价\$39时的销量高于\$34和\$44。  
+- **心理机制**：
+  - 消费者将9结尾价格视为促销或“划算”信号。
+  - 左位数效应：消费者更关注价格的前几位数字（如$39与$34的差异感知为“30多美元” vs. “30美元以下”）。
+- **应用**：适用于低介入度商品或冲动消费场景（如快消品、零售促销）。
 
 ---
 
-### 三、行为定价策略工具箱  
-**1. 价格结构设计：**  
-- **三阶定价法**：入门款（引流）+ 核心款（利润主力）+ 旗舰款（价值锚定）  
-- **动态锚点**：实时显示"同类商品均价$X"（需合规）  
-
-**2. 支付体验优化：**  
-- **分段计价**：$599→"每天仅$1.6"（时间维度拆解）  
-- **损失规避**："满$100免运费"比"运费$5"转化率高43%  
-
-**3. 所有权营造：**  
-- AR虚拟试用（眼镜/家具行业）  
-- 订阅制"首月1美元"沉没成本锁定  
-
-**4. 参考系重构：**  
-- "原价$299"划除+ "现价$199"突出（视觉对比度≥3:1）  
-- "已为1523人节省$XXX"社会证据强化  
+##### 1.2 韦伯-费希纳定律（Weber-Fechner Law）
+- **现象**：消费者对价格变化的敏感度基于**百分比变化**而非绝对值。
+- **案例**：
+  - 消费者愿为省\$5驱车5英里购买\$10商品，但不愿为省\$5驱车5英里购买\$1,000商品。
+- **心理机制**：
+  - 消费者更关注**相对节省比例**（\$5占\$10的50% vs. 占\$1,000的0.5\%）。
+- **应用**：
+  - **小额商品**：强调绝对折扣（如“立减\$5”）。
+  - **高价商品**：强调百分比折扣或长期价值（如“分期免息”）。
 
 ---
 
-**关键结论：**  
-1. **行为定价四维模型**：  
-   - 认知维度（9结尾效应）  
-   - 情感维度（禀赋效应）  
-   - 社会维度（参考价格）  
-   - 选择架构（情境效应）  
+##### 1.3 禀赋效应（Endowment Effect）
+- **现象**：当消费者感到“拥有”产品时，支付意愿显著提高。
+- **案例**：
+  - **马克杯实验**：被赋予“拥有权”的学生对马克杯的估值远高于未拥有者，即使双方均未实际持有商品。
+- **心理机制**：
+  - 虚拟所有权即可触发禀赋效应（如试驾、免费试用）。
+- **应用**：
+  - **体验式营销**：允许消费者独立试驾、试用产品。
+  - **虚拟拥有感**：通过AR/VR技术模拟产品使用场景。
 
-2. **神经定价有效性**：  
-   - fMRI显示$X.99价格激活大脑岛叶（愉悦中枢）强度比整数价高29%  
-   - 但过度使用导致"廉价感"阈值：同一产品连续3次9结尾定价后效应衰减58%  
+---
 
-3. **跨文化差异**：  
-   - 中国消费者对8结尾价格敏感度比9高14%  
-   - 欧洲市场对"含税价"的支付意愿比分离标价高22%  
+##### 1.4 参考价格效应（Reference Price Effect）
+- **现象**：消费者通过对比“参考价格”（如历史价、标价）判断当前价格是否合理。
+- **案例**：
+  - 广告中先展示高价（如“原价\$999”），再显示现价\$599，营造“超值”感知。
+- **心理机制**：
+  - 锚定效应：初始高价设定消费者心理预期。
+- **应用**：
+  - **标价策略**：展示“原价”与“促销价”对比。
+  - **限时折扣**：强调价格短期回调（如“仅限今日”）。
 
-4. **数字化杠杆**：  
-   - 动态锚定算法：实时抓取竞品最高价作参考基准  
-   - 价格A/B测试系统：每小时可运行200+价格组合实验  
+---
 
-**行动框架：**  
-1. 建立《行为定价审计清单》：  
-   - 每月检查价格尾数分布（9/5占比＞80%）  
-   - 季度更新参考价格数据库（竞品/历史/替代品）  
+##### 1.5 情境效应（Context Effects）
+- **现象**：消费者的选择受选项组合的影响，倾向于选择中间价位。
+- **案例**：
+  - 相机定价实验：当增加高价选项（\$469）时，中间价位（\$239）销量显著提升。
+- **心理机制**：
+  - 消费者通过对比建立“价值阶梯”，中间选项被视为“性价比最优”。
+- **应用**：
+  - **产品分层**：推出“好、更好、最好”三档产品（如基础款、升级款、旗舰款）。
+  - **诱饵效应**：引入高价选项推动中间价位的销售（如餐厅菜单设计）。
 
-2. 实施"神经定价实验室"：  
-   - 眼动追踪优化价格页面布局  
-   - 皮肤电反应测试折扣表达方式  
+---
 
-3. 开发情境效应引擎：  
-   - 根据用户浏览历史动态调整产品排序（优先展示锚定款）  
-   - 在购物车界面智能推荐"最佳性价比"选项  
+#### 2. 核心结论与商业启示
+1. **消费者非完全理性**：  
+   - 定价策略需结合经济逻辑与心理洞察，传统价格弹性分析需补充行为经济学视角。
 
-4. 设计反行为陷阱机制：  
-   - 设置价格欺诈预警系统（锚定价虚高超过30%自动触发审核）  
-   - 伦理审查委员会评估"虚拟所有权"营销尺度  
+2. **动态定价杠杆**：  
+   - **低介入商品**：利用9结尾定价、限时促销快速刺激购买。  
+   - **高介入商品**：通过试驾、试用触发禀赋效应，增强转化。
 
-**终极洞见：** 定价心理学不是操纵工具，而是价值沟通艺术——将79%的理性价值（成本/功能）与21%的行为杠杆（心理效应）融合，才能实现定价策略的"神经经济最优解"。
+3. **参考框架设计**：  
+   - 通过锚定价格（如原价、竞品价）塑造消费者价值感知。  
+   - 使用“中间选项”策略最大化利润（如苹果iPhone的存储容量定价）。
+
+4. **长期价值与短期冲动平衡**：  
+   - 高价商品需淡化短期折扣，强调长期收益（如保修服务、品牌溢价）。  
+   - 低价商品可通过心理定价（如\$9.99）快速提升销量。
+
+---
+
+#### 3. 实践工具与策略
+- **A/B测试**：验证不同定价策略的效果（如9结尾 vs. 整数定价）。  
+- **产品组合设计**：利用“诱饵选项”引导消费者选择目标价位。  
+- **体验营销**：通过免费试用、虚拟体验增强禀赋效应。  
+- **信息框架设计**：在广告中突出参考价格（如“节省50%”）强化价值感知。
